# cuda_pencildraw

./: .gitignore  CMakeLists.txt  PencilDrawing_solution.sln  README.md
PencilDrawing/: GenStroke.cpp  GenStroke.h  PencilDrawing.cpp  PencilDrawing.vcxproj  PencilDrawing.vcxproj.filters  ReadMe.txt  ToneDrawing.cpp  ToneDrawing.h  stdafx.cpp
src/: CMakeLists.txt
src/GenPencil/: CMakeLists.txt  GenPencil.cpp  GenPencil.h
src/GenPencil/cuda/: CMakeLists.txt  cuGenPencil.cu  cuGenPencil.h
src/GenStroke/: CMakeLists.txt  GenStroke.cpp
src/GenStroke/cuda/: CMakeLists.txt  cuGenStroke.cu  cuGenStroke.h
src/PencilDraw/: CMakeLists.txt  PencilDraw.cpp  cuPencilDraw.cu  cuPencilDrawV2.cu
src/ToneDraw/: CMakeLists.txt  ToneDraw.cpp  ToneDraw.h
src/ToneDraw/cuda/: CMakeLists.txt  cuToneDraw.cu  cuToneDraw.h
